Unify old and new automation